[tool.poetry]
name = "BGD"
version = "0.1.0"
description = "Big Green Dike"
authors = ["JohnRushKucharski <johnkucharski@gmail.com>", Peter Jansson <peter.jansson@deltares.nl>"]
license = "GPL-3.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pysd = "^3.14.2"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
